--- a/view.html
+++ b/view.html
@@ -188,7 +188,7 @@
             <h2>New Frame</h2>
             <div class="frame-row">
                 <div class="frame">
-                    <img src="Frame (1).jpg" alt="Black Frame">
+                    <img src="https://github.com/sagarsardarcr7123/PhotoShop/blob/main/Frame%20(1).jpg?raw=true" alt="Black Frame">
                     <p>Frame (1)</p>
                 </div>
                 <div class="frame">
