--- a/view.html
+++ b/view.html
@@ -192,7 +192,7 @@
                     <p>Frame (1)</p>
                 </div>
                 <div class="frame">
-                    <img url="Image/Frame (2).jpg" alt="Black Frame">
+                    <url="Image/Frame (2).jpg" alt="Black Frame">
                     <p>Frame (2)</p>
                 </div>
                 <div class="frame">
