--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>PhotoShop </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Arial', sans-serif; }
+        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Arial', 'AdineKirnberg-Script',sans-serif; }
         body { scroll-behavior: smooth;background: linear-gradient(135deg, #ff9a9e, #fad0c4);}/* Header */
     header {
         background-color: #ffffff;
